tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier9UHV-AAAAAAAAAAAAAAAAAAAALg==__UHVEnergyHatch-AAAAAAAAAAAAAAAAAAAKRQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2629,
  "prerequisites": [
    2617,
    2621
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you want to make the T8 Rocket or the mkIV reactor, you'll need this.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "UHV Energy Hatch",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2617,
    2621
  ],
  "rewards": [],
  "tasks": []
}
