tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier9UHV-AAAAAAAAAAAAAAAAAAAALg==__WaitPBIwasntthel-AAAAAAAAAAAAAAAAAAAMsQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3249,
  "prerequisites": [
    2717
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Let's make a brand new plastic! The trees that you found on Barnada C have very interesting properties. Still, you can't just use the extracted radox substance raw. Some serious refining steps are in order!\n\n§6You'll need it for a ton of stuff like UIV and UMV superconductors, UEV+ hatches, or parts of the Dyson Swarm.§r\n\nCompared to the previous plastics, most of the steps required here are not chemical reactions. They are also very slow, so you might want to use a mega multiblock to help with that. This production line also underlines the necessity of large-scale plasma production. You will only need more going forward.\n\n[note]Super Heavy Radox will be needed for Dimensionally Shifted Superfluid, so store some for later.[/note]\n\n[note]The Heavy Radox you get as a byproduct can be used for MkV Naquadah Fuel.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Wait, PBI wasn't the last plastic?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2717
  ],
  "rewards": [],
  "tasks": []
}
