tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier9UHV-AAAAAAAAAAAAAAAAAAAALg==__XenoxeneXenoxsis-AAAAAAAAAAAAAAAAAAAKnQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2717,
  "prerequisites": [
    2681,
    2715
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To make the next tier plastic, Radox, or the next tier of SMDs, you will need Xenoxene.\n\nGetting the Xenoxene Xenoxsis culture is a bit tricky. The recipe is similar to the General Purpose one. Remember that all recipes in this chain are low probability recipes.\n\nYour first step is to make the Barnardafis culture, then the DNA Sample, and then the Data Orb. If you didn't grab the saplings and dirt previously (to grow more trees for logs), head back to Barnarda C.\n\nUse the same recipe as for the General Purpose one, but use the Data Orb for Barnardafis instead of Common Yeast. You should get the Barnardafis Plasmid.\n\nAgain, it's the same recipe for the next step, but with the TCetiEis Fucus Serratus culture and the Barnardafis Plasmid, this should produce the Xenoxene Xenoxsis culture. It's a 7.5% chance.\n\nYou should probably use the normal alternative recipe to make more cultures, since it's easy to fail copying it too.\n\nYou should be able to figure out yourself how to make Xenoxene once you have the culture.\n\n[note]After many years, the transformation recipe now even has NEI support![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Xenoxene Xenoxsis",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2681,
    2715
  ],
  "rewards": [],
  "tasks": []
}
